[package]
name = "rdst"
description = "A flexible parallel unstable radix sort that supports sorting by any arbitrarily defined sequence of bytes."
version = "0.19.0"
authors = ["Nathan Essex <nathan@essex.id.au>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Nessex/rdst"
homepage = "https://github.com/Nessex/rdst"
categories = ["algorithms"]
keywords = ["radix","sort","rayon","parallel","multithreaded"]
documentation = "https://docs.rs/rdst/"

[features]
default = ["default-implementations"]
bench = ["criterion", "block-pseudorand"]
tuning = ["criterion", "block-pseudorand", "jemallocator"]
default-implementations = []
work_profiles = []

[dependencies]
rayon = "1.5.1"
arbitrary-chunks = "0.4.0"
try-mutex = "0.4.0"
partition = "0.1.2"
criterion = { version = "0.3.5", optional = true }
block-pseudorand = { version = "0.1.1", optional = true }
jemallocator = { version = "0.3.2", optional = true }

[dev-dependencies]
voracious_radix_sort = { version = "1.1.0", features = ["voracious_multithread"] }
num_cpus = "1.13.0"
criterion = "0.3.5"
block-pseudorand = "0.1.1"

[profile.release]
codegen-units = 1
opt-level = 3

[[bench]]
name = "full_sort"
harness = false

[[bench]]
name = "tuning_parameters"
harness = false

[[bin]]
name = "profiling"
path = "src/cmd/profiling.rs"
required-features = ["tuning"]

[[bin]]
name = "timings"
path = "src/cmd/timings.rs"
required-features = ["tuning"]
