[package]
name = "min-supported"
description = "Used to check that the library still works even when included externally by the oldest MSRV-compatible config"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
rdst = { path = "../../" }
rayon = "=1.11"
arbitrary-chunks = "=0.4.1"
partition = "=0.1.2"
